# python-excel-automation-tool

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
data/input/: sales.xlsx
data/output/: .~lock.report.xlsx#
src/: generate_sample_data.py  main.py  processor.py  reporter.py  utils.py  validator.py
tests/: test_processor.py  test_validator.py
